--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,150 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+
+*{
+    font-family: 'Mulish', sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+h1{
+    font-family: 'Playfair Display', sans-serif;
 }
 
-* {
-  box-sizing: border-box;
+
+.menu__container {
+    height: 100vh;
+    left: -520px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+
+.menu__active {
+    left: 0;
+}
+
+.menu__show.height-3{
+   height: 11rem;
+}
+.menu__show.height-1{
+   height: 3.6rem;
+}
+
+
+.menu__opt:not(.menu__show){
+    height: 0;
+}
+
+.modal__active{
+    overflow: hidden;
+    padding-right: 17px;
+}
+
+.buttonEffect{
+    font-family: 'Mulish', sans-serif;
+    padding-top: 0.375rem/* 6px */;
+    padding-bottom: 0.375rem/* 6px */;
+    display: inline-block;
+    font-weight: bold;
+    font-size: 16px;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 500ms;
+    border-style: none;
+    position: relative;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+    
+}
+
+.buttonEffect::before{
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 999px;
+    transition: all 0.3s;
+    z-index: 1;
+}
+
+.buttonEffect:hover::before {
+    opacity: 0;
+    transform: scale(0.7,0.7);
+}
+
+.buttonEffect::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: all 0.4s;
+    transform: scale(1.5,1.5);
+    opacity: 0;
+    z-index: 1;
   }
-  body {
-    color: white;
-    background: black;
-  }
+  
+.buttonEffect:hover::after {
+    opacity: 1;
+    transform: scale(1,1);
 }
+
+.buttonEffect:hover {
+    background-color: transparent
+}
+
+
+
+
+.buttonEffectInverted{
+    font-family: 'Mulish', sans-serif;
+    padding-top: 0.375rem/* 6px */;
+    padding-bottom: 0.375rem/* 6px */;
+    display: inline-block;
+    font-weight: bold;
+    font-size: 16px;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 500ms;
+    position: relative;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+
+    
+    /* background-color: #656A76; */
+    /* color: white; */
+}
+
+.buttonEffectInverted::before{
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: all 0.3s;
+    z-index: 1;
+}
+
+.buttonEffectInverted:hover::before {
+    opacity: 0;
+    transform: scale(0.7,0.7);
+}
+
+.buttonEffectInverted::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: all 0.4s;
+    transform: scale(1.5, 1.5);
+    opacity: 0;
+    z-index: 1;
+}
+  
+.buttonEffectInverted:hover::after {
+    opacity: 1;
+    transform: scale(1,1);
+}
+
