--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ h1{
 
 .menu__container {
     height: 100vh;
-    left: -11520px;
+    left: -2000px;
 }
 
 
@@ -38,11 +38,11 @@ h1{
 
 .buttonEffect{
     font-family: 'Mulish', sans-serif;
-    padding-top: 0.375rem/* 6px */;
-    padding-bottom: 0.375rem/* 6px */;
+    padding-top: 12px!important;
+    padding-bottom: 12px!important;
     display: inline-block;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 12px!important;
     transition-property: all;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 500ms;
@@ -50,6 +50,7 @@ h1{
     position: relative;
     outline: 2px solid transparent;
     outline-offset: 2px;
+    letter-spacing: 0.1em;
     
 }
 
@@ -97,17 +98,18 @@ h1{
 
 .buttonEffectInverted{
     font-family: 'Mulish', sans-serif;
-    padding-top: 0.375rem/* 6px */;
-    padding-bottom: 0.375rem/* 6px */;
+    padding-top: 12px!important;
+    padding-bottom: 12px!important;
     display: inline-block;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 12px!important;
     transition-property: all;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 500ms;
     position: relative;
     outline: 2px solid transparent;
     outline-offset: 2px;
+    letter-spacing: 0.1em;
 }
 
 .buttonEffectInverted::before{
@@ -183,6 +185,10 @@ h1{
 .valoresSwiper{
     margin: 0 50px!important;
     padding: 0 50px!important;
+}
+
+.testimoniosSwiper .swiper-wrapper{
+    transition : all 5s linear!important;
 }
 
 
