--- a/styles/globals.css
+++ b/styles/globals.css
@@ -94,6 +94,12 @@ h1{
 }
 
 
+.devaranaWord__active{
+    --tw-translate-x: 33.333333%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+    padding-left: 0px!important;
+}
+
 
 
 .buttonEffectInverted{
@@ -197,5 +203,11 @@ h1{
     .valoresSwiper{
         margin: 5px!important;
         padding: 0!important;
+    }
+
+    .devaranaWord__active{
+        --tw-translate-x: 0%;
+        transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+        
     }
 }
