--- a/styles/globals.css
+++ b/styles/globals.css
@@ -194,7 +194,7 @@ h1{
 }
 
 .testimoniosSwiper .swiper-wrapper{
-    transition : all 5s linear!important;
+    /* transition : all 5s linear!important; */
 }
 
 
