--- a/styles/globals.css
+++ b/styles/globals.css
@@ -214,3 +214,36 @@ h1{
         
     }
 }
+
+
+
+/* Carrusel */
+
+@keyframes sliderLineOne{0%{transform:translateX(100%)}100%{transform:translate(-100%)}}
+@keyframes sliderLineTwo{0%{transform:translateX(0)}100%{transform:translate(-200%)}}.line{max-width:100%;overflow:hidden}
+.line-stroke:hover .line-stroke__item{-webkit-animation-play-state:paused;animation-play-state:paused}
+
+.line-stroke {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    flex-shrink: 0;
+}
+
+.line-stroke__1 {
+    -webkit-animation: sliderLineOne 60s linear infinite;
+    animation: sliderLineOne 60s linear infinite;
+}
+
+.line-stroke__2 {
+    -webkit-animation: sliderLineTwo 60s -30s linear infinite;
+    animation: sliderLineTwo 60s -30s linear infinite;
+}
+
+.line-stroke__item {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    flex-shrink: 0;
+}
