--- a/styles/globals.css
+++ b/styles/globals.css
@@ -201,6 +201,39 @@ h1{
     background-color: #fff!important;
 }
 
+.listEffect_item{
+    animation-name: change;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes change {
+    0%, 12.66%, 100% {
+        transform: translate3d(0, 0, 0);
+   }
+    16.66%, 29.32% {
+        /* transform: translate3d(0, -48px, 0); */
+        transform: translate3d(0, -100%, 0);
+   }
+    33.32%, 45.98% {
+        /* transform: translate3d(0, -96px, 0); */
+        transform: translate3d(0, -200%, 0);
+   }
+    49.98%, 62.64% {
+        /* transform: translate3d(0, -144px, 0); */
+        transform: translate3d(0, -300%, 0);
+   }
+    66.64%, 79.3% {
+        /* transform: translate3d(0, -96px, 0); */
+        transform: translate3d(0, -200%, 0);
+   }
+    83.3%, 95.96% {
+        /* transform: translate3d(0, -48px, 0); */
+        transform: translate3d(0, -100%, 0);
+   }
+}
+
+
 /* abajo de  1024px */
 @media (max-width: 1024px) {
     .valoresSwiper{
